spacing correction in index style

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ header nav ul {
 
 main {
   grid-area: main;
+  margin-bottom: 60px;
 }
 
 #banner {
@@ -144,8 +145,8 @@ main {
 .recipes1,
 .recipes2 {
   display: flex;
-  gap: 20px;
-  margin-bottom: 20px;
+  gap: 40px;
+  margin-bottom: 40px;
   width: 100%;
 }
 
